# mobility-data-analysis

./: .gitignore  README.md  classification.py  generate_visual.py  main.py  metadata.py  preprocess.py  pyproject.toml  requirements.txt
docs/: data.md
scripts/: run_classification.py
src/: calculate_distance.py  classifier.py  data_manager.py  label_encoder.py  mapmatch.py  pipeline.py  preprocessing.py  preprocessor.py  trip_detect.py  visualize.py
src/streamlit/: app.py  delete.py  raw_data.py  trips.py
src/streamlit/components/: create_map.py
src/trips/: create_trips.py  get_trip_times_from_data.py  trip_detect.py
streamlit/: app.py  ml.py  raw_data.py  trips.py
streamlit/components/: create_map.py  select_user.py
trips/: create_trips.py  get_trip_times_from_data.py
